--- a/private_fictive_reading_website(3).html
+++ b/private_fictive_reading_website(3).html
@@ -99,9 +99,9 @@ His accent was hard to place—definite European, blunt, a little hoarse.
 
 "I’m Eleanor," I said, diving under his table to plug it in. "You can call me Ell."
 
-"Max," he replied.
+"Franz," he replied.
 
-I emerged from under the table and sat opposite him, just for a second, to make sure the charge was holding. "Thanks, Max. You're a lifesaver. You studying too?"
+I emerged from under the table and sat opposite him, just for a second, to make sure the charge was holding. "Thanks, Franz. You're a lifesaver. You studying too?"
 
 "No," he said, stirring his milkshake. "Just... escaping."
 
