--- a/private_fictive_reading_website(3).html
+++ b/private_fictive_reading_website(3).html
@@ -127,7 +127,7 @@ He hesitated. Just for a fraction of a second.
 
 "No," he cracked a small smile. "Faster. Moving sensitive cargo across borders. Strict deadlines. If I am late, people get very angry. It is... high pressure."
 
-"Sounds intense," I yawned, packing up my books. "Well, Max from Logistics, thanks for the electricity."
+"Sounds intense," I yawned, packing up my books. "Well, Franz from Logistics, thanks for the electricity."
 
 I thought he was a truck driver, or maybe a shift manager for a shipping company. I didn't ask. I just liked that he didn't ask me for anything.
 
