--- a/private_fictive_reading_website(3).html
+++ b/private_fictive_reading_website(3).html
@@ -131,7 +131,76 @@ He hesitated. Just for a fraction of a second.
 
 I thought he was a truck driver, or maybe a shift manager for a shipping company. I didn't ask. I just liked that he didn't ask me for anything.
 
-He didn't ask for my number. He didn't ask what I was doing later. He just drank his milkshake and let me vent.
+He didn't ask for my number. He didn't ask what I was doing later. He just drank his milkshake and let me vent. Well, eventually he did ask for my number, and I gave it to him, you know incase things get serious.
+
+      Chapter Two: The Aerodynamics of a Toast
+Max slumped back against the sofa, crossing his arms. "Fine. Crash. See if I care."
+
+"Nobody is crashing, mate. It's a diagram."
+
+Two weeks later, the crash actually happened. But not to Noah’s diagram.
+
+It was a Sunday, and our house was plunged into the dark ages because the WiFi router had finally given up the ghost.
+
+"Fix it," I told Noah.
+
+"I can’t," Noah said, lying on the floor. "It’s a hardware issue. The silicon soul has left the casing. We have to go out."
+
+I had a 5,000-word chapter due on Monday morning. So, against my better judgment, we packed our bags and trudged down to The King’s Head, the only pub within walking distance that didn't smell entirely of mildew and had free WiFi.
+
+The pub was packed. I managed to secure a sticky corner table while Noah went to get drinks. I put my noise-canceling headphones on, opened my laptop, and tried to ignore the fact that the entire room was screaming at the television screens mounted on the walls.
+
+"Ell," Noah said, sliding a coke across the table. He didn't sit down. He was standing, staring over my head at the screen behind me.
+
+"I am working, Noah. Do not disturb the genius."
+
+"Ell," he said again. His voice was weird. Strained. "Look at the TV."
+
+"I don't care about football."
+
+"It’s not football. It’s... motor racing. I think."
+
+"Good for them. Do they drive in circles?" I typed a sentence about urban density.
+
+"Ell, please." Noah grabbed my shoulder. "Just look. Tell me I’m crazy. Tell me that isn't who I think it is."
+
+I sighed, ripped my headphones off, and spun around in my chair.
+
+The screen was massive. It was showing a podium ceremony. Confetti was raining down. The Dutch national anthem was blaring out of the pub speakers.
+
+Standing on the top step of the podium, holding a gold trophy that was roughly the size of a small child, was a man in a blue racing suit. He was drenched in sweat and champagne. He was grinning, waving at a crowd of thousands.
+
+I squinted.
+
+The camera zoomed in on his face. The piercing blue eyes. The nose. The slight sunburn on his cheeks that he always complained about getting.
+
+The man on the screen laughed and sprayed champagne over the guy standing next to him.
+
+I felt the blood drain out of my body. The noise of the pub faded into a dull roar.
+
+"That’s him isn’t it? The logistics guy," Noah whispered.
+
+"It can't be," I said, my voice trembling. "Franz is... He is in France. Moving crates. He texted me this morning about a delayed lorry."
+
+"That is Franz, or at least he was. You know what this means, right, Ell? That logistics guy had been lying to us!" Noah said, pointing a shaking finger at the screen.
+
+The chyron beneath the man’s face flashed in bold white letters:
+
+MAX VERSTAPPEN — WINNER — MONACO GRAND PRIX
+
+"Verstappen?" I read the name out loud. It felt foreign. Heavy. My jaw clenched. So did my fingers.
+
+"He’s not a logistics manager," Noah said, his voice rising in hysteria. "Ell. He’s the World Champion. He’s... he’s the guy I told to fix his endplates." Noah grabbed his hair. "I explained aerodynamics to Max Verstappen. Oh my god. I need a drink. I need a stronger drink."
+
+I didn't move. I stared at the screen as Max—my Max, the guy who wore holes in his socks and ate my yogurt—hoisted the trophy high above his head.
+
+He looked like a god. He looked untouchable.
+
+And he looked like the biggest liar in the history of the universe.
+
+I slowly closed my laptop.
+
+"Noah," I said, my voice deadly calm. "Let’s go back home. I’ve got a logistics manager to kill with a scale ruler."
     </p>
   </article>
 </main>
