--- a/private_fictive_reading_website(3).html
+++ b/private_fictive_reading_website(3).html
@@ -190,7 +190,7 @@ MAX VERSTAPPEN — WINNER — MONACO GRAND PRIX
 
 "Verstappen?" I read the name out loud. It felt foreign. Heavy. My jaw clenched. So did my fingers.
 
-"He’s not a logistics manager," Noah said, his voice rising in hysteria. "Ell. He’s the World Champion. He’s... he’s the guy I told to fix his endplates." Noah grabbed his hair. "I explained aerodynamics to Max Verstappen. Oh my god. I need a drink. I need a stronger drink."
+"He’s not a logistics manager," Noah said, his voice rising in hysteria. "Ell. He’s an F1 Driver. He’s... he’s the guy I told to fix his endplates." Noah grabbed his hair. "I explained aerodynamics to Max Verstappen. Oh my god. I need a drink. I need a stronger drink."
 
 I didn't move. I stared at the screen as Max—my Max, the guy who wore holes in his socks and ate my yogurt—hoisted the trophy high above his head.
 
