--- a/private_fictive_reading_website(3).html
+++ b/private_fictive_reading_website(3).html
@@ -75,7 +75,7 @@
 Chapter One: The Diner
 
 It started with a thesis crisis.
-I was a final-year Architecture student, fueled entirely by panic and cheap espresso. It was 3:15 AM on a Tuesday, and I was sitting in The Greasy Spoon, a 24-hour diner that smelled permanently of bacon grease and despair. I was surrounded by a fortress of textbooks on Brutalism and urban decay.
+I was a final-year Architecture student, fueled entirely by panic and cheap espresso. It was 3:15 AM on a Tuesday in 2021, and I was sitting in The Greasy Spoon, a 24-hour diner that smelled permanently of bacon grease and despair. I was surrounded by a fortress of textbooks on Brutalism and urban decay.
 
 The bell above the door jingled, and a guy walked in. He looked exactly how I felt: completely drained. He was wearing an oversized hoodie with the hood pulled up, generic jeans, and he kept his head down, avoiding eye contact with the sleepy waitress.
 
