--- a/private_fictive_reading_website(3).html
+++ b/private_fictive_reading_website(3).html
@@ -87,7 +87,7 @@ I scrambled under the table, checking the outlet. Dead. I looked around frantica
 
 I took a deep breath, grabbed my plug, and marched over.
 
-"I am so sorry," I said, crouching near his booth, holding my plug up like a peace offering. "Do you mind? If my laptop dies, I’ll fail my major, and I’ll have to live in my crappy flat forever."
+"I am so sorry," I said, crouching near his booth, holding my plug up like a peace offering. "Do you mind? If my laptop dies, I’ll fail my major, and I’ll have to live in my crappy flat inside this dinner forever."
 
 He looked up.
 
