--- a/private_fictive_reading_website(3).html
+++ b/private_fictive_reading_website(3).html
@@ -133,7 +133,7 @@ I thought he was a truck driver, or maybe a shift manager for a shipping company
 
 He didn't ask for my number. He didn't ask what I was doing later. He just drank his milkshake and let me vent. Well, eventually he did ask for my number, and I gave it to him, you know incase things get serious.
 
-      Chapter Two: The Aerodynamics of a Toast
+Chapter Two: The Aerodynamics of a Toast
       
 Three months later, Max had become a fixture in my life. A weird, intermittent fixture.
       
@@ -231,7 +231,7 @@ MAX VERSTAPPEN — WINNER — MONACO GRAND PRIX
 
 "Verstappen?" I read the name out loud. It felt foreign. Heavy. My jaw clenched. So did my fingers.
 
-"He’s not a logistics manager," Noah said, his voice rising in hysteria. "Ell. He’s an F1 Driver. He’s... he’s the guy I told to fix his endplates." Noah grabbed his hair. "I explained aerodynamics to Max Verstappen. Oh my god. I need a drink. I need a stronger drink."
+"He’s not a logistics manager," Noah said, his voice rising in hysteria. "Ell. He’s an F1 Driver. He’s... he’s the guy I lectured about not knowing aerodynamics." Noah grabbed his hair. "I explained aerodynamics to Max Verstappen. I told him that he was talking nonsense. Oh my god. I need a drink. I need a stronger drink."
 
 I didn't move. I stared at the screen as Max—my Max, the guy who wore holes in his socks and ate my yogurt—hoisted the trophy high above his head.
 
