--- a/private_fictive_reading_website(3).html
+++ b/private_fictive_reading_website(3).html
@@ -1,1 +1,88 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Kucing's — Private Fictive Creations</title>
+  <style>
+    body {
+      font-family: Georgia, "Times New Roman", serif;
+      background: #0f172a;
+      color: #e5e7eb;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      padding: 2rem;
+      text-align: center;
+      border-bottom: 1px solid #334155;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2.2rem;
+    }
+    header p {
+      color: #94a3b8;
+      margin-top: 0.5rem;
+    }
+    main {
+      max-width: 700px;
+      margin: 3rem auto;
+      padding: 0 1.5rem;
+    }
+    .chapter-link {
+      background: #020617;
+      padding: 1.5rem 2rem;
+      border-radius: 12px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.4);
+      margin-bottom: 1.5rem;
+      transition: transform 0.2s ease;
+    }
+    .chapter-link:hover {
+      transform: translateY(-2px);
+    }
+    .chapter-link a {
+      color: #f8fafc;
+      text-decoration: none;
+      font-size: 1.2rem;
+    }
+    .chapter-link span {
+      display: block;
+      color: #94a3b8;
+      font-size: 0.85rem;
+      margin-top: 0.4rem;
+    }
+    footer {
+      text-align: center;
+      padding: 2rem 1rem;
+      font-size: 0.85rem;
+      color: #64748b;
+    }
+  </style>
+</head>
+<body>
+
+<header>
+  <h1>Kucing's</h1>
+  <p>A quiet place for my stories — shared only by link</p>
+</header>
+
+<main>
+  <div class="chapter-link">
+    <a href="chapter-1.html">Off Track — Chapter One</a>
+    <span>The Diner</span>
+  </div>
+
+  <div class="chapter-link">
+    <a href="chapter-2.html">Off Track — Chapter Two</a>
+    <span>The Aerodynamics of a Toast</span>
+  </div>
+</main>
+
+<footer>
+  This site is private. Each chapter has its own direct link.
+</footer>
+
+</body>
+</html>
 
